# Theatrical-Players-Refactoring-Kata

./: .gitignore  README.md  license.txt  parrot.py  test_parrot.py
c/: .gitignore  CMakeLists.txt  README.md  plan.md
c/src/: CMakeLists.txt  statement.c  statement.h
c/test-catch2/: CMakeLists.txt  main.cpp  sample_catch.Currency_Number_Format.existing_play_types.approved.txt  sample_catch.Theatrical_Players.new_play_types.approved.txt  sample_catch.cpp
c/test-gtest/: sample_gtest.StatementTest.ExistingPlayTypes.approved.txt  sample_gtest.StatementTest.NewPlayTypes.approved.txt  sample_gtest.cpp
cpp/: CMakeLists.txt  README.md  statement.cpp  statement.h
cpp/tests/: CMakeLists.txt  main.cpp  plays.json  test_statement.cpp
csharp/: .gitignore  TheatricalPlayersRefactoringKata.sln
csharp/TheatricalPlayersRefactoringKata.Tests/: StatementPrinterTests.cs  StatementPrinterTests.exampleStatementHtml.approved.txt  StatementPrinterTests.statementWithNewPlayTypes.approved.txt  StatementPrinterTests.test_statement_exemple.approved.txt  TheatricalPlayersRefactoringKata.Tests.csproj
dart/: .gitignore  README.md  pubspec.yaml
dart/lib/: invoice.dart  performance.dart  (+2 more)
delphi/: .gitignore  TheatricalPlayersGrp.groupproj  clrInvoice.pas  clrPlay.pas  clrStatementPrinter.pas
go/: README.md  go.mod  go.sum
java/: README.md  build.gradle  settings.gradle
javascript/: .gitignore  README.md  package.json
kotlin/: build.gradle  build.gradle.kts
php/: .gitignore  DockerFile  README.md  composer.json  docker-compose.yml  ecs.php  ecs.yaml  index.php  phpstan.neon  phpunit.xml
python/: README.md  create_statement_data.py  performanceGenerator.py  pytest.ini  requirements.txt  statement.py  statementData.py
ruby/: Gemfile  README.md  Rakefile
rust/: Cargo.toml  README.md
scala/: .gitignore  .scalafmt.conf  build.sbt
typescript/: jest.config.ts  package.json  tsconfig.json
typescript-oop/: jest.config.ts  package-lock.json  package.json  tsconfig.json
(+98 files in other folders)
